Fix not to double count the widths of hyphens

The widths of hyphens are added to BidiRun in LayoutBlockFlow, and
should not be included in WordMeasurement.

BUG=671129

Review-Url: https://codereview.chromium.org/2548333004
Cr-Commit-Position: refs/heads/master@{#436886}

Former-commit-id: 1b73086fba57f587b632d5c60c3e912317fa2613